# termait

./: .gitignore  .termait.example  LICENSE  README.md  pyproject.toml  requirements.txt  termait.py
