[project]
name = "termait"
version = "0.1.0"
description = "AI-powered terminal command generator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.42.0",
    "rich>=13.9.4",
    "openai>=1.0.0",
    "prompt_toolkit>=3.0.0",
]

[project.scripts]
tm = "termait:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
